New example files that match the new drivers

--- a/Example/main.c.example
+++ b/Example/main.c.example
@@ -8,20 +8,17 @@
 
 #include <stdio.h>
 #include <avr/io.h>
-#include <avr/sfr_defs.h>
-
-//#include <hal_defs.h>
-#include <ihal.h>
 
 #include <ATMEGA_FreeRTOS.h>
+#include <task.h>
 #include <semphr.h>
 
-#include <FreeRTOSTraceDriver.h>
 #include <stdio_driver.h>
 #include <serial.h>
 
  // Needed for LoRaWAN
 #include <lora_driver.h>
+#include <status_leds.h>
 
 // define two Tasks
 void task1( void *pvParameters );
@@ -31,7 +28,7 @@ void task2( void *pvParameters );
 SemaphoreHandle_t xTestSemaphore;
 
 // Prototype for LoRaWAN handler
-void lora_handler_create(UBaseType_t lora_handler_task_priority);
+void lora_handler_initialise(UBaseType_t lora_handler_task_priority);
 
 /*-----------------------------------------------------------*/
 void create_tasks_and_semaphores(void)
@@ -50,7 +47,7 @@ void create_tasks_and_semaphores(void)
 
 	xTaskCreate(
 	task1
-	,  (const portCHAR *)"Task1"  // A name just for humans
+	,  "Task1"  // A name just for humans
 	,  configMINIMAL_STACK_SIZE  // This stack size can be checked & adjusted by reading the Stack Highwater
 	,  NULL
 	,  2  // Priority, with 3 (configMAX_PRIORITIES - 1) being the highest, and 0 being the lowest.
@@ -58,7 +55,7 @@ void create_tasks_and_semaphores(void)
 
 	xTaskCreate(
 	task2
-	,  (const portCHAR *)"Task2"  // A name just for humans
+	,  "Task2"  // A name just for humans
 	,  configMINIMAL_STACK_SIZE  // This stack size can be checked & adjusted by reading the Stack Highwater
 	,  NULL
 	,  1  // Priority, with 3 (configMAX_PRIORITIES - 1) being the highest, and 0 being the lowest.
@@ -68,11 +65,6 @@ void create_tasks_and_semaphores(void)
 /*-----------------------------------------------------------*/
 void task1( void *pvParameters )
 {
-	#if (configUSE_APPLICATION_TASK_TAG == 1)
-	// Set task no to be used for tracing with R2R-Network
-	vTaskSetApplicationTaskTag( NULL, ( void * ) 1 );
-	#endif
-
 	TickType_t xLastWakeTime;
 	const TickType_t xFrequency = 500/portTICK_PERIOD_MS; // 500 ms
 
@@ -81,7 +73,7 @@ void task1( void *pvParameters )
 
 	for(;;)
 	{
-		vTaskDelayUntil( &xLastWakeTime, xFrequency );
+		xTaskDelayUntil( &xLastWakeTime, xFrequency );
 		puts("Task1"); // stdio functions are not reentrant - Should normally be protected by MUTEX
 		PORTA ^= _BV(PA0);
 	}
@@ -90,11 +82,6 @@ void task1( void *pvParameters )
 /*-----------------------------------------------------------*/
 void task2( void *pvParameters )
 {
-	#if (configUSE_APPLICATION_TASK_TAG == 1)
-	// Set task no to be used for tracing with R2R-Network
-	vTaskSetApplicationTaskTag( NULL, ( void * ) 2 );
-	#endif
-
 	TickType_t xLastWakeTime;
 	const TickType_t xFrequency = 1000/portTICK_PERIOD_MS; // 1000 ms
 
@@ -103,7 +90,7 @@ void task2( void *pvParameters )
 
 	for(;;)
 	{
-		vTaskDelayUntil( &xLastWakeTime, xFrequency );
+		xTaskDelayUntil( &xLastWakeTime, xFrequency );
 		puts("Task2"); // stdio functions are not reentrant - Should normally be protected by MUTEX
 		PORTA ^= _BV(PA7);
 	}
@@ -114,20 +101,19 @@ void initialiseSystem()
 {
 	// Set output ports for leds used in the example
 	DDRA |= _BV(DDA0) | _BV(DDA7);
-	// Initialise the trace-driver to be used together with the R2R-Network
-	trace_init();
+
 	// Make it possible to use stdio on COM port 0 (USB) on Arduino board - Setting 57600,8,N,1
-	stdio_create(ser_USART0);
+	stdio_initialise(ser_USART0);
 	// Let's create some tasks
 	create_tasks_and_semaphores();
 
 	// vvvvvvvvvvvvvvvvv BELOW IS LoRaWAN initialisation vvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
-	// Initialise the HAL layer and use 5 for LED driver priority
-	hal_create(5);
+	// Status Leds driver
+	status_leds_initialise(5); // Priority 5 for internal task
 	// Initialise the LoRaWAN driver without down-link buffer
-	lora_driver_create(1, NULL);
+	lora_driver_initialise(1, NULL);
 	// Create LoRaWAN task and start it up with priority 3
-	lora_handler_create(3);
+	lora_handler_initialise(3);
 }
 
 /*-----------------------------------------------------------*/
